- Added a new Data Exporter tool that allows a user to export all internal data used by the program into a zip file. Data exported in this way will contain any translation entries added by non-English languages as well as any and all custom data content created, added, modified, removed, etc. by a specified character setting's enabled custom datasets.

Data Changes:
- Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
- Vocal Expansion can now properly only be taken at Betaware, Deltaware, or Gammaware grades and now properly adds conditional limit modifiers. Existing characters with this bioware will need to reapply improvements to get these bonuses.
- Internal Synthlink now doubles the cost of the instrument into which it is taken instead of adding double the cost to the instrument. This is based on the way Internal Smartgun's cost is described in the core rulebook.
- Fixed the Unrestricted Kill Code Qualities customdata not working correctly to allow non-technomancers taking the qualities.
- Added missing Corps Cadavre entries. Fixes #4975.
- Picking the Chaos mentor spirit when playing with the German Data Changes custom dataset now prompts the user to take Improved Potential twice instead of prompting only once and then prompting that the user take select a limit for the special Improved Potential (Chaos Mentor) adept power. Fixes #4977.
- Added the Surprise improvement type to improvements.xml to enable adding the improvement via custom Improvements. Closes #4962
- Added missing martial arts from Datapuls SOTA 2080. Fixes #4986.
- Added spidersilk spec to the Exotic Ranged Weapon skill. Closes #5000
- Added Semi-Automatics spec to Streetline Special.