@@ -93,6 +93,7 @@ Application Changes:
 - Weapon and weapon accessory reach and concealability entries can now work off of character attributes and/or ratings.
 - The rating entry in the Weapons tab has been changed to a dial in Create mode, allowing users to alter the ratings of eligible weapons, weapon accessories, and gear loaded into weapon accessories more easily.
 - Added a new Data Exporter tool that allows a user to export all internal data used by the program into a zip file. Data exported in this way will contain any translation entries added by non-English languages as well as any and all custom data content created, added, modified, removed, etc. by a specified character setting's enabled custom datasets.
+- The button to automatically scan a folder for PDFs can now also detect PDFs in languages different from the currently selected user interface language, though it will prioritize PDFs that match the current user interface language if possible. It can also now be used to scan folders recursively.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
@@ -142,6 +143,7 @@ Data Changes:
 - Armory asset for advanced lifestyles now properly costs 1000. Fixes #5193.
 - Monofilament Whips now properly increase their Accuracy by 2 when they are wirelessly enabled.
 - Registered sprite limits are now equal to a character's Charisma in all English pre-made settings to match the entry in the fifth printing of the CRB. German settings are unaffected because it is still Logic-based in the German CRB.
+- Fixed some faulty text matches for German books that fetched strings that would span multiple lines, thus sometimes causing the books to not be detected.
 
 Fixes implemented by BM123499
 
@@ -284,6 +286,9 @@ Changed/New Strings:
 - DialogFilter_Zip
 - Title_ExportData
 - Button_Export_SaveDataAs
+- String_SelectFolderForPDFScan
+- Message_ScanFoldersRecursively
+- String_Fallback_Pattern
 
 Removed Strings:
 - Label_SelectMetamagic_Disadvantage
